package com.sensei.search.req.protobuf;

option java_package = "com.sensei.search.req.protobuf";
option java_outer_classname = "SenseiSysRequestBPO";

option optimize_for = SPEED;

message SysRequest{
  required bytes val = 1;
}

